# BoostSerializationTwoCompilationUnitsDemo

./: CMakeLists.txt  README.md
Plugin/: CMakeLists.txt  InitPlugin.cpp  P-serial.hpp  P.cpp  P.hpp  Plugin.cpp  Plugin.hpp  serial_plugin_p.cpp
Plugin/testing/: test_Plugin.cxx  test_Plugin_2.cxx
XY/: A-serial.hpp  A-serial.ipp  A.cpp  A.hpp  B-serial.hpp  B-serial.ipp  B.cpp  B.hpp  CMakeLists.txt  PluginSupport.cpp  PluginSupport.hpp  X-serial.hpp  X.cpp  X.hpp  Y-serial.hpp  Y.cpp  Y.hpp  config.hpp.in  serial_xy_ab.cpp
XY/testing/: test_AB.cxx  test_AB_2.cxx  test_X.cxx  test_X_2.cxx  test_Y.cxx  test_Y_2.cxx
Z/: C-serial.ipp  C.cpp  C.hpp  CMakeLists.txt  Z-serial.hpp  Z.cpp  Z.hpp  serial_z_c.cpp
Z/testing/: test_C.cxx  test_C_2.cxx  test_C_3.cxx  test_Z.cxx  test_Z_2.cxx
testing/XY/: test_AB.cxx  test_AB_2.cxx  test_X.cxx  test_X_2.cxx  test_Y.cxx  test_Y_2.cxx
testing/Z/: test_C.cxx  test_C_2.cxx  test_Z.cxx  test_Z_2.cxx
utilities/: build.sh  clean.sh  run.sh
